# python-masterserver

./: .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml.example  pyproject.toml  setup.py  tox.ini
ci/: report-coverage.sh
masterserver/: __init__.py  __main__.py  _codec.py  _logging.py  auth.py  client_handler.py  exceptions.py  master_server_client.py  masterserver.py  parsed_query_reply.py  red_eclipse_server.py  remote_master_server.py  server_list_parser.py  server_pinger.py
tests/: test_cube2_codec.py  test_query_reply_parser.py  test_red_eclipse_server.py  test_run_server.py
